panel no longer out of bounds

--- a/css/pacman.css
+++ b/css/pacman.css
@@ -94,8 +94,8 @@ span.combo, span.fruits {
 }
 
 #panel, #home { 
-	width: 550px;
-	height: 690px;
+	width: 570px;
+	height: 710px;
 	margin: auto;
 	margin-top: 10px;
 	left: 0px;
